force-app/main/default/objects/Quote_Line_Item__c/Quote_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Quote Line Item</label>
    <nameField>
        <displayFormat>QLI-{000000}</displayFormat>
        <label>Line Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quote Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>