force-app/main/default/objects/Quote_Line_Item__c/fields/Approval_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Approval_Remarks__c</fullName>
    <label>Approval Remarks</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>