force-app/main/default/objects/Quote_Line_Item__c/fields/Converted_to_Order__c.field-meta.xml
<CustomField>
    <fullName>Converted_to_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Converted to Order</label>
    <type>Checkbox</type>
</CustomField>