force-app/main/default/objects/Quote_Line_Item__c/fields/Converted_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Converted_Unit_Price__c</fullName>
    <label>Converted Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>