force-app/main/default/objects/Quote_Line_Item__c/fields/Discount_Percentage_Legacy__c.field-meta.xml
<CustomField>
    <fullName>Discount_Percentage_Legacy__c</fullName>
    <label>Discount (Percentage)</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>