force-app/main/default/objects/Quote_Line_Item__c/fields/Discounted_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Discounted_Unit_Price__c</fullName>
    <formula>Sales_Price__c - Discount_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discounted Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>