force-app/main/default/objects/Quote_Line_Item__c/fields/Exchange_Rate_Used__c.field-meta.xml
<CustomField>
    <fullName>Exchange_Rate_Used__c</fullName>
    <label>Exchange Rate Used</label>
    <precision>16</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>