force-app/main/default/objects/Quote_Line_Item__c/fields/Final_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Final_Unit_Price__c</fullName>
    <formula>Discounted_Unit_Price__c + Uplift_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>