force-app/main/default/objects/Quote_Line_Item__c/fields/GST_Percent__c.field-meta.xml
<CustomField>
    <fullName>GST_Percent__c</fullName>
    <label>GST %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>