force-app/main/default/objects/Quote_Line_Item__c/fields/Net_Line_Amount__c.field-meta.xml
<CustomField>
    <fullName>Net_Line_Amount__c</fullName>
    <formula>Total_Line_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Line Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>