force-app/main/default/objects/Quote_Line_Item__c/fields/Price_Book_Entry__c.field-meta.xml
<CustomField>
    <fullName>Price_Book_Entry__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Price Book Entry</label>
    <referenceTo>Price_Book_Entry__c</referenceTo>
    <relationshipLabel>Quote Line Items</relationshipLabel>
    <relationshipName>QLI_Price_Book_Entry</relationshipName>
    <type>Lookup</type>
</CustomField>