force-app/main/default/objects/Quote_Line_Item__c/fields/Product_Variant_Master__c.field-meta.xml
<CustomField>
    <fullName>Product_Variant_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Variant Master</label>
    <referenceTo>Product_Variant_Master__c</referenceTo>
    <relationshipLabel>Quote Line Items</relationshipLabel>
    <relationshipName>Quote_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>