force-app/main/default/objects/Quote_Line_Item__c/fields/RSP_INR__c.field-meta.xml
<CustomField>
    <fullName>RSP_INR__c</fullName>
    <label>RSP (INR)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>