force-app/main/default/objects/Quote_Line_Item__c/fields/Shipping_Charges__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Charges__c</fullName>
    <label>Shipping Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>