force-app/main/default/objects/Quote_Line_Item__c/fields/Total_Line_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Line_Amount__c</fullName>
    <formula>Taxable_Amount__c + GST_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Line Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>