force-app/main/default/objects/Quote_Line_Item__c/fields/Uplift_Amount__c.field-meta.xml
<CustomField>
    <fullName>Uplift_Amount__c</fullName>
    <formula>Discounted_Unit_Price__c * Uplift_Percent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Uplift Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>